# ZeldaLike

./: CMakeLists.txt  README.md  compile_commands.json
.zed/: tasks.json
assets/images/: source.txt
assets/tiled/: overworld.tsx
docs/: 开发日志.md
include/: game.h
src/: game.c  main.c
